fix terms overflow

--- a/_source/pages/terms/Terms.scss
+++ b/_source/pages/terms/Terms.scss
@@ -5,6 +5,8 @@
 }
 
 #iub-pp-container {
+  overflow: hidden;
+
   h1 {
     display: none;
   }
